# PP

./: .gitignore  CMakeLists.txt
Program01_(hw)/Program01/Program01/: Program01A.c  Program01B.c  Program01D.c
Program02_(temp)/Program02/: Temperatura1.c  Temperatura1A.c  Temperatura1B.c  Temperatura1C.c  Temperatura1D.c  Temperatura1Dint.c  Temperatura1E.c  Temperatura2.c  Temperatura2A.c  Temperatura2B.c  Temperatura2C.c  Temperatura2D.c  Temperatura2E.c  Temperatura2F.c
Program03_(rk)/: RownanieKwadratowe.c  RownanieKwadratoweA.c  RownanieKwadratoweB.c  RownanieKwadratoweC.c  RownanieKwadratoweD.c  RownanieKwadratoweDedit.c
Program04/: silnia.c  silniaA.c  silniaB.c
Program05/: FibonacciA.c  FibonacciB.c  FibonacciC.c  czasy  fbnA.c  fbnB.c
Program06/: odpowiedz.txt  txt  wyjscieA.txt  wyjscieB.txt  znakiA.c  znakiB.c
Program07/: funTabTekst.c  funTabTekst.h  tekstA.c  tekstB.c  wejscie.txt
Program08/: funWskTekst.c  funWskTekst.h  makefile  tekstwsk.c  wejscie.txt
Program09/: FunkcjeMacierzowe.c  FunkcjeMacierzowe.h  dane.txt  macierze.c  makefile
Program10/: TypZespolone.c  TypZespolone.h  dane.txt  makefile  zespolone.c
ProgramCpp/: Powitanie.cpp
